test/fail/addr.min
program
start
    &3 !
end
